partial : update db structure, add base

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
     </div>
     <footer id="footer" class="notready"></footer>
     <div id="splash">
-       <div class="main" >Rockwell Automation</div>
-       <div class="sub">Dalian Campus</div>
+      <div class="inner">
+          <div class="Number">20</div>
+           <div class="words" >
+                <div class="w1">Rockwell</div>
+                <div class="w2">Automation</div>
+           </div>
+           <div class="sub">Dalian Campus</div>
+      </div>      
     </div>
     <script data-main="js/main.js"  src="js/vendor/require.min.js"></script>
   </body>
