--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <aside class="col-md-2  sidebar notready" id="sidebar"></aside>
+        <aside class="col-md-2  sidebar notready panel-container" id="sidebar"></aside>
         <article class="col-md-10 main notready" id="main"></article>
       </div>
     </div>
