--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Dalian Site HTML5</title>
+        <title>Welcome to Dalian Campus</title>
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <link rel="apple-touch-icon-precomposed" href="favicon.png">
         <link rel="stylesheet" href="css/main.css">
